# mlops-serving

./: .gitignore  Dockerfile  README.md  docker-compose.yml  ollama-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
docs/: architecture.md  deployment-guide.md
docs/decisions/: 001-fastapi-over-flask.md  002-model-versioning-strategy.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: model-serving.json
monitoring/grafana/provisioning/dashboards/: default.yml
reports/: evidently_drift_report.html  evidently_drift_report.json
src/: cli.py  config.py
src/analysis/: ab_test_analysis.py
src/api/: app.py  dependencies.py  schemas.py
src/api/middleware/: logging.py  metrics.py
src/api/routes/: health.py  models.py  predict.py
src/models/: loader.py  registry.py  versioning.py
src/monitoring/: alerts.py  drift.py  evidently_drift.py  metrics.py
src/serving/: ab_testing.py  llm_server.py  predictor.py  shadow.py
tests/: conftest.py
tests/integration/: test_ab_testing.py  test_api.py
tests/unit/: test_drift.py  test_predictor.py  test_registry.py
train/: evaluate.py  train_model.py
